--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 
             <div class="row">
                 <div class="column ss-copyright">
-                    <span>© Copyright 100soft 2021</span> 
+                    <span>© Copyright Luther 2021</span> 
                     <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> Distribution By <a href="https://themewagon.com">Themewagon</a></span>
                 </div>
 
